@@ -1,5 +1,8 @@
 1.7.0
 =====
+(Andrea Bollini)
+- [DS-585] The Content Disposition configuration is ignored by unpublished items
+
 (Reinhard Engels)
 - [DS-637] Browse index bug/fix ONLY for authority index: first "too low" confidence value stop current item metadata to be indexed in the autority index
 
